# fairino-fr5-visual-servo

./: .gitignore  CMakeLists.txt  MIGRATION_FIXES.md  PROJECT_FILES.md  README.md  ROLL_DEBUG_GUIDE.md  STRUCTURE_CHANGES.md  UPGRADE_TO_ABSOLUTE_MODE.md  aruco_detector.py  config.yaml  config.yaml.example  controller.py  fr5_driver.py  handeye_calibration_eye_in_hand.py  handeye_result.txt  main_vs.py  prepare_github.sh  requirements.txt  run_visual_servo.py  utils_math.py
config/: config.yaml  config.yaml.backup
data/: handeye_result.txt
docs/: CALIBRATION_GUIDE.md  README.md  ROLL_ISSUE_ANALYSIS.md
scripts/: handeye_calibration_eye_in_hand.py
src/: __init__.py  main_vs.py
src/visual_servo/: __init__.py  aruco_detector.py  controller.py  controller_absolute.py  fr5_driver.py  handeye_io.py  realtime_plotter.py  utils_math.py
tests/: test_plotter.py
